--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -19,7 +19,7 @@
                                 class="oe_stat_button"
                                 string="Corection PP"
                                 icon ="fa-reply"
-                             attrs="{'invisible': [('state','!=','in_progress')]}"
+                             attrs="{'invisible': [('validation_correction','=',False)]}"
                              >
 
                      </button>
