[ADD] purchase_indonesia : add Grn/srn info in purchase order tree

--- a/purchase_indonesia/views/inherit_purchase_order.xml
+++ b/purchase_indonesia/views/inherit_purchase_order.xml
@@ -68,7 +68,8 @@
                  </xpath>
                  <xpath expr="//field[@name='state']" position="after">
                         <field name="count_grn_done" string="GRN/SRN Dn" />
-                        <field name="count_grn_assigned" string="GRN/SRN Av" />
+                        <field name="picking_count" string="GRN/SRN Av"/>
+                        <field name="count_grn_assigned" string="GRN/SRN Av" invisible="1"/>
                  </xpath>
              </field>
          </record>
