--- a/purchase_indonesia_inventory_manage/views/view_purchase_indonesia_good_request.xml
+++ b/purchase_indonesia_inventory_manage/views/view_purchase_indonesia_good_request.xml
@@ -14,6 +14,15 @@
             </field>
         </record>
 
+        <record id="action_good_request_reject" model="ir.actions.act_window">
+            <field name="name">Reject Goods Request</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">purchase_indonesia.good.request.reject</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+        </record>
+
         <!-- View Form: Path -->
         <record id="view_procur_good_request_form" model="ir.ui.view">
             <field name="name">Procur Good Request</field>
@@ -96,14 +105,7 @@
             </field>
         </record>
 
-         <record id="action_good_request_reject" model="ir.actions.act_window">
-            <field name="name">Reject Goods Request</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">estate_procurement.good.request.reject</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">form</field>
-            <field name="target">new</field>
-        </record>
+
 
         <record model="ir.actions.act_window" id="procur_good_request_action">
             <field name="name">Goods Request</field>
