--- a/purchase_indonesia/reports/report_purchase_request.xml
+++ b/purchase_indonesia/reports/report_purchase_request.xml
@@ -10,7 +10,7 @@
         <template id="report_purchase_request">
             <t t-call="report.html_container">
                 <t t-foreach="docs" t-as="o">
-            		<t t-call="report.external_layout">
+            		<t t-call="report.internal_layout">
 						<div class="page" style="font-family: times; background-color:white; color:black;">
 		              		<!-- Header -->
 		              		<div class="row" style="text-align:left;font-size:14pt;">
