[ADD] purchase_indonesia : add description in GRN/SRN report

--- a/purchase_indonesia/reports/report_goods_receipt_notes.xml
+++ b/purchase_indonesia/reports/report_goods_receipt_notes.xml
@@ -205,7 +205,7 @@
 										    <td colspan="5" class="noborder">
 										      	Penjelasan :
 										    	<br></br>
-										      	[todo] add penjelasan di objek G/SRN
+										      	<span t-field="o.description"/>
 										    </td>
 										</tr>
 									</table>    	
