--- a/purchase_indonesia/views/inherit_stock_picking.xml
+++ b/purchase_indonesia/views/inherit_stock_picking.xml
@@ -36,6 +36,7 @@
                      <field name="validation_check_approve" invisible="1"/>
                      <field name="validation_manager" invisible="1"/>
                      <field name="validation_user" invisible="1"/>
+                     <field name="shipper_by" string="Shipper By"/>
                      <field name="requested_by" string="Requester PP"/>
                      <field name="assigned_to" string="Assigned to Manager"/>
                      <field name="validation_receive" string="Validation" />
